summary_note
